<resources>
    <string name="app_name">DRISHTI</string>
    <string name="app_title">DRISHTI</string>
    <string name="cmn_ok">OK</string>
    <string name="cmn_cancel">Cancel</string>
    <string name="common_error_no_internet_description">No internet connection found!</string>
    <string name="api_error_unable_process_request">Unable to process request at this time, Try later.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_remember_me">Remember Me</string>
    <string name="err_username">Please enter username.</string>
    <string name="err_password">Please enter your password.</string>
    <string name="enter_username">Please enter your username.</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="api_default_error">Server down please try again later.</string>
    <string name="connection_error">No internet connection.</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="logout">Logout</string>
    <string name="layer">Layer</string>
    <string name="cmn_done_button">Done</string>
    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="landphone_number">Landphone Number</string>
    <string name="email">Email</string>
    <string name="place_name">Place Name</string>
    <string name="village_name">Village</string>
    <string name="street_name">Street</string>
    <string name="ward_number">Ward Number</string>
    <string name="postoffice">Post Office</string>
    <string name="pincode">Pincode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="property_usage">Usage</string>
    <string name="property_owner">Owner Details</string>
    <string name="undoButtonDescription">Undo</string>
    <string name="redoButtonDescription">Redo</string>
    <string name="stopButtonDescription">Stop</string>
    <string name="forgot_email_id">Email Address</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_reset">Reset Password</string>
    <string name="back_login">Back to Login</string>
    <string name="err_forgot_email">Please enter email.</string>
    <string name="invalid_forgot_email">Please enter valid email.</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_go_to_location">Go To Location</string>
    <string name="dashboard_location">Location</string>
    <string name="dashboard_current_location">Current Location</string>
    <string name="dashboard_measurement">Measure</string>
    <string name="dashboard_zoom_in">Zoom In</string>
    <string name="dashboard_zoom_out">Zoom Out</string>
    <string name="dashboard_longitude">Longitude</string>
    <string name="dashboard_latitude">Latitude</string>
    <string name="dashboard_submit">Submit</string>
    <string name="err_latitude">Please enter latitude.</string>
    <string name="err_longitude">Please enter longitude.</string>
    <string name="layers_adding_success">Selected layer added.</string>
    <string name="layers_adding_failure">Failed to add selected layer.</string>
    <string name="msg_geometry">Select a Geometry</string>
    <string name="msg_location">Select Location</string>
    <string name="dashboard_area">Area :</string>
    <string name="dashboard_length">Length :</string>
    <string name="dashboard_radius">Radius :</string>
    <string name="dashboard_default_lat_lon">Lat  : 0\nLon : 0</string>
    <string name="dashboard_invalid_geometry">Invalid Geometry</string>
    <string name="dashboard_search_here">Search here</string>
    <string name="dashboard_layers">Layers</string>
    <string name="dashboard_count">Count</string>
    <string name="dashboard_legends">Legend</string>
    <string name="dashboard_opacity">Opacity</string>
    <string name="dashboard_basemap">Base Maps</string>
    <string name="dashboard_logout">Logout</string>
    <string name="dashboard_total_features">Total Features</string>
    <string name="dashboard_feature_details">Features</string>
    <string name="dashboard_more_features">More</string>
    <string name="dashboard_features_zoom">Zoom To</string>
    <string name="dashboard_no_layers">No Layers Selected</string>
    <string name="dashboard_no_count">No Count Available</string>
    <string name="dashboard_no_basemap">No Basemap Available</string>
    <string name="dashboard_no_layers_available">No Layers Available</string>
    <string name="dashboard_feature_details_edit">E D I T</string>
    <string name="search_no_data">No Search Result\nAvailable</string>
    <string name="no_network_no_data">Your network is unavailable\nCheck your data or wifi connection</string>
    <string name="server_error_no_data">Unable to fetch data from server\nPlease try again later</string>
    <string name="dashboard_try_again">Try Again</string>
    <string name="dashboard_show_info">Show Info</string>
    <string name="dashboard_close_info">Close Info</string>
    <string name="search_filter_title">Search Filter</string>
    <string name="search_property_id">Property Id</string>
    <string name="building_details_title">Building Details</string>
    <string name="is_landmark">Is Landmark?</string>
    <string name="building_name">Building Name</string>
    <string name="permit_no">Permit Number</string>
    <string name="building_under">Building Under</string>
    <string name="building_ref_id">Building Reference ID</string>
    <string name="building_location">Building Location :</string>
    <string name="building_structure_type">Structure Type</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="localbody">Localbody</string>
    <string name="longitude_latitude">Lon,Lat</string>
    <string name="err_lat_lon_search">Invalid search query.</string>
    <string name="err_building_name">Please enter building name.</string>
    <string name="err_permit_no">Please enter permit number.</string>
    <string name="err_building_under">Please select building under.</string>
    <string name="err_building_ref_id">Please enter building reference ID.</string>
    <string name="err_state">Please select state.</string>
    <string name="err_district">Please select district.</string>
    <string name="err_localbody">Please select local body.</string>
    <string name="err_ward_number">Please select ward number.</string>
    <string name="err_structure_type">Please enter structure type.</string>
    <string name="err_building_location">Please locate the point on map.</string>
    <string name="building_location_dialog_title">Building Location</string>
    <string name="property_details_title">Property Details</string>
    <string name="floor_roof_details_title">Floor-Roof Details</string>
    <string name="building_condition">Building Condition</string>
    <string name="door_status">Door Status</string>
    <string name="which_floor">Which Floor</string>
    <string name="building_status">Building Status</string>
    <string name="building_usage">Building Usage</string>
    <string name="new_pro_id">New Property ID</string>
    <string name="old_pro_id">Old Property ID</string>
    <string name="number_of_years">Number of Years Since Property is Build</string>
    <string name="year_of_construction">Year of Construction</string>
    <string name="any_institute">Any Institute</string>
    <string name="centralised_ac">Centralised AC</string>
    <string name="normal_ac">Normal AC</string>
    <string name="structural_change">Any Structural Change</string>
    <string name="higher_floor">Higher Floor Type >250m^2</string>
    <string name="lower_floor_type">Any Other Lower Floor Type</string>
    <string name="roof_type">Roof Type</string>
    <string name="roof_percentage">Roof Percentage</string>
    <string name="roof_category">Roof Category</string>
    <string name="floor_type">Floor Type</string>
    <string name="floor_area">Floor Area</string>
    <string name="floor_category">Floor Category</string>
    <string name="photo_1">Photo 1</string>
    <string name="photo_2">Photo 2</string>
    <string name="plan_image">Plan Image</string>
    <string name="err_spinner_type_already_selected">"Already Selected.</string>
    <string name="err_property_building_name">Please select building name.</string>
    <string name="err_building_condition">Please select building condition.</string>
    <string name="err_door_status">Please select door status.</string>
    <string name="err_which_floor">Please select which floor.</string>
    <string name="err_building_status">Please select building status.</string>
    <string name="err_building_usage">Please select building usage.</string>
    <string name="err_new_pro_id">Please enter new property id.</string>
    <string name="err_old_pro_id">Please enter old property id.</string>
    <string name="err_number_of_years">Please enter number of years.</string>
    <string name="err_year_of_construction">Please enter year of construction.</string>
    <string name="err_any_institute">Please select any institute.</string>
    <string name="err_centralised_ac">Please select centralised ac.</string>
    <string name="err_normal_ac">Please select normal ac.</string>
    <string name="err_any_structural_change">Please select any structural change.</string>
    <string name="err_higher_floor_gt_250sqmts">Please select higher floor>250m^2 .</string>
    <string name="err_any_other_lower_floor_type">Please select any other lower floor type.</string>
    <string name="err_floor_type">Please select floor type.</string>
    <string name="err_photo1">Please capture Photo 1.</string>
    <string name="err_photo2">Please capture Photo 2.</string>
    <string name="err_plan">Please capture Plan Image.</string>
    <string name="err_floor_area">Please enter floor area.</string>
    <string name="err_floor_category">Please select floor category.</string>
    <string name="err_roof_category">Please select roof category.</string>
    <string name="err_roof_percentage">Please enter roof percentage.</string>
    <string name="img_pkr_select_option">Select Options</string>
    <string name="building_assets_title">BUILDING ASSETS</string>
    <string name="utility_title">UTILITY</string>
    <string name="water_body_title">WATER BODY</string>
    <string name="other_assets_title">OTHER ASSETS</string>
    <string name="well_details_owner">Well Owner</string>
    <string name="well_details_well_purpose">Well Purpose</string>
    <string name="well_details_location">Location</string>
    <string name="well_details_cover">Well Cover</string>
    <string name="well_details_survey_no">Survey Number</string>
    <string name="well_details_near_road">Near Road</string>
    <string name="well_details_re_water_availability_marks">Re Water Availability Marks</string>
    <string name="well_details_status">Status</string>
    <string name="well_details_seasonal">Seasonal</string>
    <string name="well_details_type">Well Type</string>
    <string name="well_details_ward_number">Ward Number</string>
    <string name="well_details_remarks">Remarks ( Max Length 100 )</string>
    <string name="well_details_photo_1">Photo</string>
    <string name="well_details_well_location">Well Location</string>
</resources>