<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent"
    android:padding="@dimen/standard_spacing_medium">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/standard_spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/includeDial0gHeader"
                layout="@layout/include_dialog_header" />

            <TextView
                android:id="@+id/txtBuildingAsset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/standard_spacing_medium"
                android:text="@string/building_assets_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium_x" />

            <TextView
                android:id="@+id/txtRoadUtility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/standard_spacing_medium"
                android:text="@string/utility_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium_x" />

            <TextView
                android:id="@+id/txtWaterBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/standard_spacing_medium"
                android:text="@string/water_body_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium_x"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/txtOtherAssets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:padding="@dimen/standard_spacing_medium"
                android:text="@string/other_assets_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium_x"
                android:visibility="visible"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>
