<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvWellDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSubmit"
        android:layout_alignParentTop="true"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="@dimen/standard_spacing_medium">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellLocation"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_location"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellOwner"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellOwner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_owner"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellPurpose"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_well_purpose"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellCover"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_cover"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellSurveyNo"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellSurveyNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_survey_no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellNearRoad"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellNearRoad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_near_road"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellReWaterAvailabilityMarks"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellReWaterAvailabilityMarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_re_water_availability_marks"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellStatus"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etWellStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_status"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWellType"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSSpinner
                    android:id="@+id/srWellType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_type"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSSpinner>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWardNo"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSSpinner
                    android:id="@+id/srWardNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/well_details_ward_number"
                    android:minHeight="@dimen/standard_edt_txt_height_medium"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSSpinner>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutRemarks"
                style="@style/AppCommonTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_regular">

                <in.ults.ipms.views.IPMSEditText
                    android:id="@+id/etRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:hint="@string/well_details_remarks"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:minHeight="@dimen/standard_edt_txt_height_max"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/standard_text_size_medium">

                </in.ults.ipms.views.IPMSEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbSeasonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_checkbox"
                android:fontFamily="@font/roboto_regular"
                android:minHeight="@dimen/standard_edt_txt_height_medium"
                android:paddingStart="@dimen/standard_spacing_small"
                android:paddingEnd="@dimen/dimen_zero_dp"
                android:text="@string/well_details_seasonal"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium" />


            <TextView
                android:id="@+id/txtWellImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/well_details_photo_1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgWell"
                android:layout_width="match_parent"
                android:layout_height="@dimen/standard_image_height_large"
                android:layout_marginTop="@dimen/standard_spacing_mini"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_property_image_place_holder" />

            <TextView
                android:id="@+id/txtWellLocation"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_marginTop="@dimen/standard_spacing_medium"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/well_details_well_location"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/standard_text_size_medium" />

            <include
                android:id="@+id/includeMiniMapProperty"
                layout="@layout/include_mini_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_spacing_medium"
                android:layout_marginBottom="@dimen/standard_spacing_medium" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorDarkBlue"
        android:padding="@dimen/standard_spacing_medium"
        android:paddingTop="@dimen/standard_spacing_medium"
        android:text="@string/submit_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/standard_text_size_medium" />


</RelativeLayout>

